--- a/data/.config.users.json
+++ b/data/.config.users.json
@@ -6,7 +6,7 @@
                 "view-store-position": false,
                 "view-show-grid": true,
                 "view-snap-grid": true,
-                "view-grid-size": 20,
+                "view-grid-size": "20",
                 "view-node-status": true,
                 "view-node-show-label": true,
                 "view-show-tips": true,
@@ -14,6 +14,9 @@
             },
             "tours": {
                 "welcome": "4.0.2"
+            },
+            "context": {
+                "flowRefresh": false
             }
         }
     }
