--- a/data/package.json
+++ b/data/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "@flowfuse/node-red-dashboard": "~1.14.0",
         "node-red-node-sqlite": "~1.1.0"
     }
 }
